Deleted scrollbar, Fixed padding, fixed weird behaviour on mobile version. Added sticky total

--- a/src/pages/Cart/CartList/CartList.module.scss
+++ b/src/pages/Cart/CartList/CartList.module.scss
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  max-height:416px;
-  overflow-y: auto;
+ 
 }
 
 
