--- a/src/pages/Cart/CartPage.module.scss
+++ b/src/pages/Cart/CartPage.module.scss
@@ -1,6 +1,8 @@
 @import '../../styles/colors';
 
 .cart {
+  margin-top: 46px;
+  margin-bottom: 80px;
   &__pageName {
     margin-top: 16px;
     margin-bottom: 32px;
@@ -21,9 +23,17 @@
 
 @media screen and (max-width: 1199px) {
   .cart {
+    margin-bottom: 64px;
     &__content {
       flex-direction: column;
       gap: 32px;
     }
+  }
+}
+
+@media screen and (max-width: 639px) {
+  .cart {
+    margin-top: 42px;
+    margin-bottom: 56px;
   }
 }
